--- a/datn-frontend/index.html
+++ b/datn-frontend/index.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo_icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>VIFOOD - Siêu thị chay sạch nhất Việt Nam</title>
+  <!-- GoongJS Map Library -->
   <script src='https://cdn.jsdelivr.net/npm/@goongmaps/goong-js@1.0.9/dist/goong-js.js'></script>
   <link href='https://cdn.jsdelivr.net/npm/@goongmaps/goong-js@1.0.9/dist/goong-js.css' rel='stylesheet' />
-  <script src="https://cdn.jsdelivr.net/npm/@goongmaps/goong-geocoder@1.1.1/dist/goong-geocoder.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/@goongmaps/goong-geocoder@1.1.1/dist/goong-geocoder.css" rel="stylesheet"
-    type="text/css" />
-  <title>VIFOOD - Siêu thị chay sạch nhất Việt Nam</title>
+  <!-- GoongGeocoder Plugin -->
+  <script src='https://cdn.jsdelivr.net/npm/@goongmaps/goong-geocoder@1.0.3/dist/goong-geocoder.min.js'></script>
+  <link href='https://cdn.jsdelivr.net/npm/@goongmaps/goong-geocoder@1.0.3/dist/goong-geocoder.css' rel='stylesheet' />
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-<script src="https://kit.fontawesome.com/fd6beee098.js" crossorigin="anonymous"></script>
 
 </html>
